Fix the dark mode on the greeting screen Closes #4

--- a/src/app.css
+++ b/src/app.css
@@ -4,19 +4,24 @@
 @tailwind utilities;
 
 :root {
-  --canvas-light-bg: #ffffff;
-  --canvas-light-fg: #000000;
+  --background-light: #ffffff;
+  --on-background-light: #000000;
 
-  --canvas-dark-bg: #22272e;
-  --canvas-dark-fg: #adbac7;
+  --background-dark: #1b1e23;
+  --on-background-dark: #b0b8c5;
 
-  --canvas-bg: var(--canvas-light-bg);
-  --canvas-fg: var(--canvas-light-fg);
+  --background: var(--background-light);
+  --on-background: var(--on-background-light);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --canvas-bg: var(--canvas-dark-bg);
-    --canvas-fg: var(--canvas-dark-fg);
+    --background: var(--background-dark);
+    --on-background: var(--on-background-dark);
   }
+}
+
+body {
+  background: var(--background);
+  color: var(--on-background);
 }
